fixed deprecated stuff